[package]
name = "formaty"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "formaty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7"
tauri-plugin-global-shortcut = "2"
image = { version = "0.25", features = ["avif", "webp", "tiff", "ico", "gif", "bmp"] }
base64 = "0.22"
